# table_to_text

./: LICENSE  README.md  explore_project.ipynb  main.py  pyproject.toml  test data.csv
table_to_text/: __init__.py  data_extraction.py  get_answer.py  knowledge_base.py  workflow.py
template/: column_describe.yaml  retriver_prompt.yaml
